--- a/evalai-server/package.json
+++ b/evalai-server/package.json
@@ -2,9 +2,9 @@
   "name": "evalai-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,3 +20,4 @@
     "mongoose": "^8.19.3"
   }
 }
+
